--- a/page3.html
+++ b/page3.html
@@ -20,10 +20,10 @@
 			<div>
 				<div>
 					<ul>
-						<li><a href="index.html">Home</a></li> <!-- Home page -->
-						<li><a href="page2.html">Music by Title</a></li> <!-- Music -->
-						<li><a href="page3.html">Music by Genre</a></li> <!-- Music -->
-						<li><a href="contact.php">Contact</a></li> <!-- Contact page -->
+						<li><a href="indexv2.html">Home</a></li> <!-- Home page -->
+						<li><a href="page2v2.html">Music by Title</a></li> <!-- Music -->
+						<li><a href="page3v2.html">Music by Genre</a></li> <!-- Music -->
+						<li><a href="contactv2.php">Contact</a></li> <!-- Contact page -->
 					</ul>
 				</div>
 			</div>
@@ -31,8 +31,8 @@
 	</div>
 	
 	<div class="nav">
-		<ul><a href="login.php">Login</a></ul>
-		<li><a href="signup.php">Sign Up</a></li>
+		<ul><a href="loginv2.php">Login</a></ul>
+		<li><a href="signupv2.php">Sign Up</a></li>
 	</div>
 	
 	<div class="header">
@@ -42,11 +42,11 @@
 	<div class="content">
 		<h3>Top Songs Right Now:</h3>
 		<hr>
-		<div class="image"><img src="images/image_placeholder2.jpg" width="99.7%"></div>
+		<div class="image2"><img src="images/placeholder3.jpg" width="95%"></div>
 		<hr>
-		<div class="image"><img src="images/image_placeholder2.jpg" width="99.7%"></div>
+		<div class="image2"><img src="images/placeholder3.jpg" width="95%"></div>
 		<hr>
-		<div class="image"><img src="images/image_placeholder2.jpg" width="99.7%"></div>
+		<div class="image2"><img src="images/placeholder3.jpg" width="95%"></div>
 		<hr>
 	</div>
 	<!-- Copyright Statement -->
