--- a/index.html
+++ b/index.html
@@ -20,28 +20,23 @@
 			<div>
 				<div>
 					<ul>
-						<li><a href="indev2.html">Home</a></li> <!-- Home page -->
-						<li><a href="page2v2.html">Music by Title</a></li> <!-- Page with Music -->
-						<li><a href="page2v2.html">Music by Genre</a></li> <!-- Page with Music 2 -->
-						<li><a href="contactv2.php">Contact</a></li> <!-- Contact page -->
+						<li><a href="index.html">Home</a></li> <!-- Home page -->
+						<li><a href="page2.html">Music by Title</a></li> <!-- Page with Music -->
+						<li><a href="page3.html">Music by Genre</a></li> <!-- Page with Music 2 -->
+						<li><a href="contact.php">Contact</a></li> <!-- Contact page -->
 					</ul>
 				</div>
 			</div>
 		</div>
 	</div>
 	
-	<div class="nav">
-		<ul><a href="loginv2.php">Login</a></ul>
-		<li><a href="signup.php">Sign Up</a></li>
-	</div>
-	
 	<header class="showcase">
 	<div class="container showcase-inner">
 		<br><br><br><br><br><br><br><br><br><br>
 		<h1>Z U L U</h1>
-		<a href="page2v2.html" class="btn">Start Listening</a><br> <!-- Link to the music page (2nd page) -->
 		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
 			Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut.</p>
+		<a href="page2.html" class="btn">Start Listening</a> <!-- Link to the music page (2nd page) -->
 		<br><br><br><br><br><br><br><br><br><br>
 		<div id="footer">
 			&copy; Copyright Jake Boyd, all rights reserved, Tawa College 2022
