--- a/page2.html
+++ b/page2.html
@@ -31,6 +31,7 @@
 	</div>
 	
 	<div class="nav">
+		<ol><a href="logout.php">Log Out</a></ol>
 		<ul><a href="login.php">Login</a></ul>
 		<li><a href="signup.php">Sign Up</a></li>
 	</div>
@@ -40,7 +41,7 @@
 	</div>
 	<br>
 	<div class="content">
-		<h3>Top Songs Right Now:</h3>
+		<h3>Top Songs:</h3>
 		<hr>
 		<div class="image"><img src="images/image_placeholder3.jpg" width="99.7%"></div>
 		<hr>
