--- a/page3.html
+++ b/page3.html
@@ -1,3 +1,13 @@
+<?php
+        session_start();
+        if(!isset($_SESSION['login_user'])){
+			header("location: login.php");
+				}
+		else{
+			$User = $_SESSION['login_user'];
+        }
+?>
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -18,22 +28,22 @@
 		<div class="hamburger"><div></div></div>
 		<div class="menu">
 			<div>
-				<div>
-					<ul>
-						<li><a href="index.html">Home</a></li> <!-- Home page -->
-						<li><a href="page2.html">Music by Title</a></li> <!-- Music -->
-						<li><a href="page3.html">Music by Genre</a></li> <!-- Music -->
-						<li><a href="contact.php">Contact</a></li> <!-- Contact page -->
-					</ul>
-				</div>
+				<?php
+					if($_SESSION['login_user'] != 'Admin'){
+						require "burger.php";
+					}
+					else {
+						require "burger-admin.php";
+					}
+				?>
 			</div>
 		</div>
 	</div>
 	
 	<div class="nav">
-		<ol><a href="logout.php">Log Out</a></ol>
-		<ul><a href="login.php">Login</a></ul>
-		<li><a href="signup.php">Sign Up</a></li>
+		<?php
+			require "nav.php"
+		?>
 	</div>
 	
 	<div class="header">
